# bacen-compliance-rag-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yml  docker-compose.yml  main.py  pyproject.toml  test_crew.py  test_graph.py  test_llama.py
data/normativas_bacen/: mock_bacen_pix.txt
docs/: openapi.json  redoc.html  testing.md  usage.md
frontend/: app_streamlit.py
mock_dir/: chroma.sqlite3
scripts/: coverage.sh  e2e_test.sh  fetch_bacen_pdfs.sh  generate_redoc.py  ingest.sh  scrape_bacen.py  start.sh  status.sh  stop.sh  test.sh
src/application/: graph.py
src/application/agents/: compliance_agents.py
src/application/use_cases/: rag_orchestrator.py
src/domain/: config_loader.py  entities.py  exceptions.py  messages.py  models.py  security.py  state.py
src/domain/ports/: llm_port.py  reranker_port.py  vector_store_port.py
src/infrastructure/config/: config_loader.py
src/infrastructure/llm/: groq_adapter.py  llm_adapter.py
src/infrastructure/parser/: pdf_ingestor.py
src/infrastructure/reranker/: reranker_adapter.py
src/infrastructure/vector_store/: chromadb_adapter.py  faiss_adapter.py  vector_store_adapter.py
src/presentation/api/: dependencies.py  main.py  routes.py
src/presentation/ui/: index.html
tests/: test_adapters.py  test_agents.py  test_api.py  test_domain.py  test_graph.py  test_security.py
vector_store/: chroma.sqlite3  default__vector_store.json  docstore.json  index_store.json
