[project]
name = "bacen-compliance-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = [
    "chromadb>=1.1.1",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "langchain>=1.3.11",
    "langgraph>=1.2.7",
    "langserve>=0.3.3",
    "llama-index>=0.14.23",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-vector-stores-faiss>=0.6.0",
    "locust>=2.44.4",
    "pydantic>=2.12.5",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "ragas>=0.4.3",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "testcontainers>=4.14.2",
    "uvicorn>=0.50.0",
]
