[project]
name = "bacen-compliance-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "langserve>=0.3.3",
    "llama-index>=0.14.23",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "locust>=2.44.4",
    "pydantic>=2.12.5",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "ragas>=0.4.3",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "testcontainers>=4.14.2",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
